--- a/index.html
+++ b/index.html
@@ -8,47 +8,47 @@
 </head>
 
 <body>
-    <div class="aaa">
-        <img src="./eisenhower-matrix.jpg">
-        <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
+    <div class="page">
+        <img class="img" src="./eisenhower-matrix.jpg">
+        <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
     </div>
     <div class="centered-main-page-element">
-        <p id="topSectionForAddingElementToList">
-            <label for="new-task">Add Item</label>
+        <p id="top-section-for-adding-element-to-list">
+            <label for="new-task" class="new-task__label">Add Item</label>
         <div class="task-row-wrapper">
             <input id="new-task" class="task" type="text">
-            <button>Add</button>
+            <button class="new-task__btn">Add</button>
         </div>
         </p>
-        <h3>Todo</h3>
-        <ul id="incompleteTasks">
+        <h3 class="section__title">Todo</h3>
+        <ul id="incomplete-tasks" class="task-list__item">
             <li>
-                <input type="checkbox">
-                <label class="task">Pay Bills</label>
+                <input class="task-list__status" type="checkbox">
+                <label class="task-list__label">Pay Bills</label>
                 <input type="text" class="task">
-                <button class="edit">Edit</button>
-                <button class="delete">
-                    <img src="./remove.svg">
+                <button class="task-list__btn">Edit</button>
+                <button class="task-list__btn">
+                    <img class="task-list__btn-image" src="./remove.svg">
                 </button>
             </li>
-            <li class="editMode">
-                <input type="checkbox">
-                <label class="task">Go Shopping</label>
+            <li class="task-list__item edit-mode">
+                <input class="task-list__status" type="checkbox">
+                <label class="task-list__label">Go Shopping</label>
                 <input type="text" value="Go Shopping" class="task">
-                <button class="edit">Save</button>
-                <button class="delete">
-                    <img src="./remove.svg">
+                <button class="task-list__btn">Save</button>
+                <button class="task-list__btn">
+                    <img class="task-list__btn-image" src="./remove.svg">
                 </button>
             </li>
         </ul>
-        <h3>Completed</h3>
+        <h3 class="section__title">Completed</h3>
         <ul id="completed-tasks">
-            <li>
-                <input type="checkbox" checked>
-                <label class="task">See the Doctor</label>
+            <li class="task-list__item">
+                <input class="task-list__status" type="checkbox" checked>
+                <label class="task-list__label">See the Doctor</label>
                 <input type="text" class="task">
-                <button class="edit">Edit</button>
-                <button class="delete">
+                <button class="task-list__btn">Edit</button>
+                <button class="task-list__btn">
                     <img src="./remove.svg">
                 </button>
             </li>
